--- a/css/view.css
+++ b/css/view.css
@@ -3,8 +3,8 @@ body {
    margin: 0;
 }
 html, body, #mapid {
-   height: 400px;
-   width: 400px
+   height: 600px;
+   width: 100%
 
 }
 body, input, select, textarea { 
