--- a/css/view.css
+++ b/css/view.css
@@ -2,12 +2,21 @@ body {
    padding: 0;
    margin: 0;
 }
-html, body, #mapid {
+#mapid {
    height: 600px;
-   width: 100%
+   width: 80%;
+   float :left;
 
 }
+
+#buttons {
+float : right;
+
+}
+
 body, input, select, textarea { 
    font-family:Verdana, Arial, Helvetica, sans-serif; 
    font-size:11px; 
 }
+
+
