--- a/css/view.css
+++ b/css/view.css
@@ -1,6 +1,7 @@
-body {
+html, body {
    padding: 0;
    margin: 0;
+   height : 100%;
 }
 input {
    margin-top : 10px;
@@ -8,20 +9,18 @@ input {
 }
 
 #mapid {
-   height: 1000px;
-   width: 78%;
-   float :left;
-
+   height: 100%;
+   width : 80%;
+   float : left; 
+}
+#sidebar {
+   float : right;
+   width : 20%;
 }
 
 #buttons {
-float : right;
-width : 22%;
 }
 #report {
-height: 600px;
-  width: 22%;
-  float: right;
   overflow: scroll;
 }
 
