--- a/css/report.css
+++ b/css/report.css
@@ -31,3 +31,16 @@ body.loading .modal {
 #commentForm {
 display: inline-block;
 }
+
+#ctext {
+   font-size : 16px;
+}
+
+.errorTxt{
+  font-color : red;
+}
+.error {
+color:red;
+font-family:verdana, Helvetica;
+font-size : 11px;
+}
